--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-logo {
@@ -13,17 +20,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -35,4 +31,30 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.playerContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 1rem;
+  margin: 1rem 0;
+}
+
+.playerContainer > p {
+  margin: unset;
+  padding: 0.8rem;
+}
+
+.playerContainer > button {
+  padding: 0.8rem;
+  font-family: system-ui;
+  font-size: 1.5rem;
+  background-color: turquoise;
+  border: 2px;
+}
+
+.playerContainer > button:hover {
+  cursor: pointer;
 }
